comment torrc options

--- a/playbooks/roles/setup/templates/torrc.j2
+++ b/playbooks/roles/setup/templates/torrc.j2
@@ -1,16 +1,15 @@
+# torrc
+
 BridgeRelay 1
 
+# obfs4 does not work with sandbox
 SandBox 0
 
 ORPort {{ or_port }}
-
-ServerTransportPlugin obfs4 exec /usr/bin/obfs4proxy
-
-ServerTransportListenAddr obfs4 0.0.0.0:{{ obfs4_port }}
-
 ExtORPort auto
+ServerTransportPlugin obfs4 exec /usr/bin/obfs4proxy
+ServerTransportListenAddr obfs4 0.0.0.0:{{ obfs4_port }}
 
 {% for item in torrc_config %}
 {{ item.name }} {{ item.value }}
-
 {% endfor %}
