--- a/playbooks/roles/setup/templates/upgrade.j2
+++ b/playbooks/roles/setup/templates/upgrade.j2
@@ -3,5 +3,4 @@
 [Timer]
 OnCalendar=
 OnCalendar=*-*-* {{ 24 | random(seed=ansible_hostname) }}:10
-RandomizedDelaySec=3000
-
+RandomizedDelaySec={{ 49 * 60 }}
