--- a/playbooks/roles/setup/templates/50-cloud-init.j2
+++ b/playbooks/roles/setup/templates/50-cloud-init.j2
@@ -7,6 +7,6 @@ auto {{ ansible_facts.default_ipv6.interface }}
 iface {{ ansible_facts.default_ipv6.interface }} inet dhcp
 
 iface {{ ansible_facts.default_ipv6.interface }} inet6 static
-    address {{ _ipv6 }}/64 dev {{ ansible_facts.default_ipv6.interface }}
+    address {{ _ipv6_new }}/64 dev {{ ansible_facts.default_ipv6.interface }}
     dns-nameservers 2a01:4ff:ff00::add:1 2a01:4ff:ff00::add:2
     gateway fe80::1
