install iptables in generic part

--- a/playbooks/roles/setup/templates/firewall.sh.j2
+++ b/playbooks/roles/setup/templates/firewall.sh.j2
@@ -1,6 +1,7 @@
 #!/bin/bash
 #set -x
 # shellcheck disable=SC1000-SC9999
+# {{ ansible_managed }}
 
 function clearAll() {
   iptables -P INPUT ACCEPT
