--- a/playbooks/roles/setup/templates/firewall.sh.j2
+++ b/playbooks/roles/setup/templates/firewall.sh.j2
@@ -27,7 +27,7 @@ function addRules() {
   iptables -A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
 
   # ssh
-  iptables -A INPUT -p tcp --dst {{ ansible_facts.default_ipv4.address }} --dport 22 -j ACCEPT
+  iptables -A INPUT -p tcp --dst {{ ansible_facts.default_ipv4.address }} --dport 22 --syn -j ACCEPT
 
   # ratelimit ICMP echo
   iptables -A INPUT -p icmp --icmp-type echo-request -m limit --limit 6/s -j ACCEPT
