allow remote Prometheus to scrape metrics

--- a/playbooks/roles/setup/templates/firewall.sh.j2
+++ b/playbooks/roles/setup/templates/firewall.sh.j2
@@ -7,9 +7,11 @@ function clearAll() {
   iptables -P INPUT ACCEPT
   iptables -P OUTPUT ACCEPT
 
-  iptables -F
-  iptables -X
-  iptables -Z
+  for table in filter nat; do
+    iptables -F -t $table
+    iptables -X -t $table
+    iptables -Z -t $table
+  done
 }
 
 function addRules() {
