--- a/playbooks/roles/setup-tor/templates/torrc.j2
+++ b/playbooks/roles/setup-tor/templates/torrc.j2
@@ -12,7 +12,12 @@ ExtORPort auto
 ServerTransportPlugin obfs4 exec /usr/bin/obfs4proxy
 ServerTransportListenAddr obfs4 0.0.0.0:{{ obfs4_port }}
 
-MetricsPort 127.0.0.1:9052
+{% if prometheus_server is defined %}
+MetricsPort {{ ansible_facts.default_ipv4.address}}:9052
+MetricsPortPolicy accept {{ prometheus_server }}
+{% else %}
+MetricsPort 9052
+{% endif %}
 MetricsPortPolicy accept 127.0.0.1
 
 {% for item in torrc_config %}
