--- a/playbooks/roles/setup/templates/firewall.sh.j2
+++ b/playbooks/roles/setup/templates/firewall.sh.j2
@@ -29,7 +29,7 @@ function addRules() {
   iptables -A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
 
   # ssh
-  iptables -A INPUT -p tcp --dst {{ ansible_facts.default_ipv4.address }} --dport 22 --syn -j ACCEPT
+  iptables -A INPUT -p tcp --dport 22 --syn -j ACCEPT
 
   # ratelimit ICMP echo
   iptables -A INPUT -p icmp --icmp-type echo-request -m limit --limit 6/s -j ACCEPT
@@ -37,13 +37,14 @@ function addRules() {
 
   {% for __i in additional_ports %}
   {% if ',' in __i or ':' in __i %}
-  iptables -A INPUT -p tcp --dst {{ ansible_facts.default_ipv4.address }} --match multiport --dports {{ __i }} --syn -j ACCEPT
+  iptables -A INPUT -p tcp --match multiport --dports {{ __i }} --syn -j ACCEPT
   {% else %}
-  iptables -A INPUT -p tcp --dst {{ ansible_facts.default_ipv4.address }} --dport {{ __i }} --syn -j ACCEPT
+  iptables -A INPUT -p tcp --dport {{ __i }} --syn -j ACCEPT
   {% endif %}
   {% endfor %}
 }
 
+#######################################################################
 set -euf
 
 if [[ $1 == "start" ]]; then
