--- a/playbooks/roles/setup/templates/50-cloud-init.j2
+++ b/playbooks/roles/setup/templates/50-cloud-init.j2
@@ -3,10 +3,13 @@
 auto lo
 iface lo inet loopback
 
-auto {{ ansible_facts.default_ipv6.interface }}
-iface {{ ansible_facts.default_ipv6.interface }} inet dhcp
+auto eth0
+iface eth0 inet dhcp
 
-iface {{ ansible_facts.default_ipv6.interface }} inet6 static
-    address {{ _ipv6_new }}/64 dev {{ ansible_facts.default_ipv6.interface }}
+iface eth0 inet6 static
+    address {{ _ipv6_new }}/64 dev eth0 nodad home
     dns-nameservers 2a01:4ff:ff00::add:1 2a01:4ff:ff00::add:2
     gateway fe80::1
+
+#iface eth0 inet6 static
+#    address {{ _ipv6_prefix }}::1/64 dev eth0 nodad
