open Tor metrics only if port is defined

--- a/playbooks/roles/setup-tor/templates/torrc.j2
+++ b/playbooks/roles/setup-tor/templates/torrc.j2
@@ -12,6 +12,7 @@ ExtORPort auto
 ServerTransportPlugin obfs4 exec /usr/bin/obfs4proxy
 ServerTransportListenAddr obfs4 0.0.0.0:{{ obfs4_port }}
 
+{% if metrics_port is defined %}
 {% if prometheus_server is defined %}
 MetricsPort {{ ansible_facts.default_ipv4.address}}:{{ metrics_port }}
 MetricsPortPolicy accept {{ prometheus_server }}
@@ -19,6 +20,7 @@ MetricsPortPolicy accept {{ ansible_facts.default_ipv4.address }}
 {% else %}
 MetricsPort 127.0.0.1:{{ metrics_port }}
 MetricsPortPolicy accept 127.0.0.1
+{% endif %}
 {% endif %}
 
 {% for item in torrc_config %}
