accept a pseudo-randomly choosen Tor relay metrics port

--- a/playbooks/roles/setup-tor/templates/torrc.j2
+++ b/playbooks/roles/setup-tor/templates/torrc.j2
@@ -13,13 +13,10 @@ ServerTransportPlugin obfs4 exec /usr/bin/obfs4proxy
 ServerTransportListenAddr obfs4 0.0.0.0:{{ obfs4_port }}
 
 {% if (metrics_port is defined) and (metrics_port | int > 0) and (metrics_port | int < 2**16) %}
-{% if prometheus_server is defined %}
-MetricsPort {{ ansible_facts.default_ipv4.address}}:{{ metrics_port }}
-MetricsPortPolicy accept {{ prometheus_server }}
-MetricsPortPolicy accept {{ ansible_facts.default_ipv4.address }}
-{% else %}
-MetricsPort 127.0.0.1:{{ metrics_port }}
+MetricsPort 127.0.0.1:9052
 MetricsPortPolicy accept 127.0.0.1
+{% if (prometheus_server is defined) and (prometheus_server is ansible.utils.ipv4) %}
+MetricsPortPolicy accept {{ prometheus_server }}
 {% endif %}
 {% endif %}
 
