allow unset contact_info or nickname

--- a/playbooks/roles/setup-tor/templates/torrc.j2
+++ b/playbooks/roles/setup-tor/templates/torrc.j2
@@ -21,5 +21,7 @@ MetricsPortPolicy accept {{ prometheus_server }}
 {% endif %}
 
 {% for item in torrc_config %}
+{% if item.value != '' %}
 {{ item.name }} {{ item.value }}
+{% endif %}
 {% endfor %}
