fix net table handling

--- a/playbooks/roles/setup/templates/firewall-ipv4.sh.j2
+++ b/playbooks/roles/setup/templates/firewall-ipv4.sh.j2
@@ -7,7 +7,7 @@ function clearAll() {
   $ipt -P INPUT ACCEPT
   $ipt -P OUTPUT ACCEPT
 
-  for table in filter nat; do
+  for table in filter; do
     $ipt -F -t $table
     $ipt -X -t $table
     $ipt -Z -t $table
