--- a/playbooks/roles/setup-tor/templates/torrc.j2
+++ b/playbooks/roles/setup-tor/templates/torrc.j2
@@ -12,10 +12,10 @@ ExtORPort auto
 ServerTransportPlugin obfs4 exec /usr/bin/obfs4proxy
 ServerTransportListenAddr obfs4 0.0.0.0:{{ obfs4_port }}
 
-{% if (metrics_port is defined) and (metrics_port | int > 0) and (metrics_port | int < 2**16) %}
+{% if (metrics_port | int > 0) and (metrics_port | int < 2**16) %}
 MetricsPort 127.0.0.1:9052
 MetricsPortPolicy accept 127.0.0.1
-{% if (prometheus_server is defined) and (prometheus_server is ansible.utils.ipv4) %}
+{% if prometheus_server is ansible.utils.ipv4 %}
 MetricsPortPolicy accept {{ prometheus_server }}
 {% endif %}
 {% endif %}
