accept bridge_distribution for torrc

--- a/playbooks/roles/setup-tor/templates/torrc.j2
+++ b/playbooks/roles/setup-tor/templates/torrc.j2
@@ -25,3 +25,6 @@ MetricsPortPolicy accept {{ prometheus_server }}
 {{ item.name }} {{ item.value }}
 {% endif %}
 {% endfor %}
+{% if defined bridge_distribution %}
+BridgeDistribution {{ bridge_distribution }}
+{% endif %}
