--- a/playbooks/roles/setup-tor/templates/torrc.j2
+++ b/playbooks/roles/setup-tor/templates/torrc.j2
@@ -1,28 +1,29 @@
 # torrc
 # {{ ansible_managed }}
 
+{% if tor_vendor == "git" %}
+DataDirectory /var/lib/tor
+{% endif %}
+
 BridgeRelay 1
 
-# obfs4 does not work with sandbox
+{% if (obfs4_port > 0) and (obfs4_port < 2**16) %}
 SandBox 0
-
 ORPort 127.0.0.1:auto
 AssumeReachable 1
 ExtORPort auto
-ServerTransportPlugin obfs4 exec /usr/bin/obfs4proxy
+ServerTransportPlugin obfs4 exec /usr/bin/{{ (tor_vendor == 'git') | ternary('lyrebird', 'obfs4proxy') }}
 ServerTransportListenAddr obfs4 0.0.0.0:{{ obfs4_port }}
+{% endif %}
 
 {% if (metrics_port | int > 0) and (metrics_port | int < 2**16) %}
 MetricsPort 127.0.0.1:9052
 MetricsPortPolicy accept 127.0.0.1
-{% if prometheus_server is ansible.utils.ipv4 %}
+{% if prometheus_server | default('') is ansible.utils.ipv4 %}
 MetricsPortPolicy accept {{ prometheus_server }}
 {% endif %}
 {% endif %}
 
-{% if defined bridge_distribution %}
-BridgeDistribution {{ bridge_distribution }}
-{% endif %}
 {% for item in torrc_config %}
 {% if item.value != '' %}
 {{ item.name }} {{ item.value }}
