--- a/playbooks/roles/setup/templates/firewall-ipv4.sh.j2
+++ b/playbooks/roles/setup/templates/firewall-ipv4.sh.j2
@@ -7,7 +7,7 @@ function clearAll() {
   $ipt -P INPUT ACCEPT
   $ipt -P OUTPUT ACCEPT
 
-  for table in filter; do
+  for table in filter nat; do
     $ipt -F -t $table
     $ipt -X -t $table
     $ipt -Z -t $table
@@ -35,13 +35,19 @@ function addRules() {
   $ipt -A INPUT -p icmp --icmp-type echo-request -m limit --limit 6/s -j ACCEPT
   $ipt -A INPUT -p icmp --icmp-type echo-request -j DROP
 
-  {% for __i in additional_ports %}
-  {% if ',' in __i or ':' in __i %}
+{% if metrics_port is defined and prometheus_server is defined %}
+  # Prometheus scrape metrics
+  $ipt -A INPUT -p tcp --src {{ prometheus_server }} --dst {{ ansible_facts.default_ipv4.address }} --dport {{ metrics_port }} --syn -j ACCEPT
+{%endif %}
+
+  # any additional ports
+{% for __i in additional_ports %}
+{% if ',' in __i or ':' in __i %}
   $ipt -A INPUT -p tcp --match multiport --dports {{ __i }} --syn -j ACCEPT
-  {% else %}
+{% else %}
   $ipt -A INPUT -p tcp --dport {{ __i }} --syn -j ACCEPT
-  {% endif %}
-  {% endfor %}
+{% endif %}
+{% endfor %}
 }
 
 #######################################################################
