--- a/playbooks/roles/setup/templates/nginx.conf.j2
+++ b/playbooks/roles/setup/templates/nginx.conf.j2
@@ -3,15 +3,15 @@
 server {
   listen {{ ansible_facts.default_ipv4.address }}:{{ metrics_port }} ssl;
   
-  location /metrics-node {
+  location = /metrics-node {
     proxy_pass http://127.0.0.1:9100/metrics;
   }
   
-  location /metrics-relay {
+  location = /metrics-relay {
     proxy_pass http://127.0.0.1:9052/metrics;
   }
 
-  location /metrics-snowflake {
+  location = /metrics-snowflake {
     proxy_pass http://127.0.0.1:9999/internal/metrics;
   }
 
