--- a/playbooks/roles/setup/templates/nginx.conf.j2
+++ b/playbooks/roles/setup/templates/nginx.conf.j2
@@ -2,21 +2,24 @@
 
 server {
   listen {{ ansible_facts.default_ipv4.address }}:{{ metrics_port }} ssl;
-  
+
+{% if prometheus_node_exporter is true %}
   location = /metrics-node {
     proxy_pass http://127.0.0.1:9100/metrics;
   }
-  
+{% endif %}
+{% if group_names is contains('public') or group_names is contains('private') %}
   location = /metrics-relay {
     proxy_pass http://127.0.0.1:9052/metrics;
   }
-
+{% endif %}
+{% if group_names is contains('snowflake') %}
   location = /metrics-snowflake {
     proxy_pass http://127.0.0.1:9999/internal/metrics;
   }
+{% endif %}
 
   ssl_protocols TLSv1.3;
-  ssl_prefer_server_ciphers on;
   ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt;
   ssl_certificate_key /etc/ssl/private/nginx-selfsigned.key;
 }
