--- a/playbooks/roles/setup/templates/nginx.conf.j2
+++ b/playbooks/roles/setup/templates/nginx.conf.j2
@@ -6,20 +6,28 @@ server {
 {% if prometheus_node_exporter is true %}
   location = /metrics-node {
     proxy_pass http://127.0.0.1:9100/metrics;
+    access_log off;
+    error_log off;
   }
 {% endif %}
 {% if group_names is contains('public') or group_names is contains('private') %}
   location = /metrics-relay {
     proxy_pass http://127.0.0.1:9052/metrics;
+    access_log off;
+    error_log off;
   }
 {% endif %}
 {% if group_names is contains('snowflake') %}
   location = /metrics-snowflake {
     proxy_pass http://127.0.0.1:9999/internal/metrics;
+    access_log off;
+    error_log off;
   }
 {% endif %}
 
   ssl_protocols TLSv1.3;
   ssl_certificate /etc/ssl/certs/nginx-selfsigned-metrics.crt;
   ssl_certificate_key /etc/ssl/private/nginx-selfsigned-metrics.key;
+
+  add_header Strict-Transport-Security "max-age=63072000" always;
 }
