--- a/playbooks/roles/setup/templates/timer.j2
+++ b/playbooks/roles/setup/templates/timer.j2
@@ -1,7 +1,8 @@
 # {{ ansible_managed }}
 
+# https://wiki.debian.org/UnattendedUpgrades
 [Timer]
 OnCalendar=
-OnCalendar=*-*-* {{ 24 | random(seed=inventory_hostname) }}:00
+OnCalendar=*-*-* {{ 12 | random(seed=inventory_hostname) }},{{ 12 + 12 | random(seed=inventory_hostname) }}:00
 RandomizedDelaySec=0
 
