--- a/playbooks/roles/setup/templates/upgrade.j2
+++ b/playbooks/roles/setup/templates/upgrade.j2
@@ -1,6 +1,6 @@
 # {{ ansible_managed }}
 
+# https://wiki.debian.org/UnattendedUpgrades
 [Timer]
-OnCalendar=
-OnCalendar=*-*-* {{ 24 | random(seed=inventory_hostname) }}:10
+OnCalendar=*-*-* {{ 12 | random(seed=inventory_hostname) }},{{ 12 + 12 | random(seed=inventory_hostname) }}:10
 RandomizedDelaySec={{ 49 * 60 }}
