--- a/playbooks/roles/setup/templates/firewall-ipv6.sh.j2
+++ b/playbooks/roles/setup/templates/firewall-ipv6.sh.j2
@@ -36,6 +36,11 @@ function addRules() {
   $ipt -A INPUT -p ipv6-icmp --icmpv6-type echo-request -j DROP
   $ipt -A INPUT -p ipv6-icmp -j ACCEPT
 
+{% if obfs4_port is defined %}
+  # obfs4 port
+  $ipt -A INPUT -p tcp --dst {{ ansible_facts.default_ipv6.address }} --dport {{ obfs4_port }} --syn -m hashlimit --hashlimit-mode srcip,dstport --hashlimit-srcmask 64 --hashlimit-name tor-ddos6-{{ obfs4_port }} --hashlimit-above 10/minute --hashlimit-burst 1 --hashlimit-htable-expire $((2 * 60 * 1000)) -j DROP
+{%endif %}
+
   # any additional ports
 {% for __i in additional_ports %}
 {% if ',' in __i or ':' in __i %}
