--- a/playbooks/roles/setup/templates/50-cloud-init.j2
+++ b/playbooks/roles/setup/templates/50-cloud-init.j2
@@ -8,6 +8,7 @@ iface {{ ansible_facts.default_ipv4.interface }} inet dhcp
 
 iface {{ ansible_facts.default_ipv6.interface }} inet6 static
     address {{ _ipv6_new }}/{{ ansible_facts.default_ipv6.prefix }} dev {{ ansible_facts.default_ipv6.interface }}
-    dns-nameservers{% for ns in ansible_facts.dns.nameservers %}{% if ns is search ':' %} {{ ns }}{% endif %}{% endfor %}
-
+{% if ansible_facts.dns.nameservers | ansible.utils.ipv6 | length > 0 %}
+    dns-nameservers {{ ansible_facts.dns.nameservers | ansible.utils.ipv6 | join(' ') }}
+{% endif %}
     gateway fe80::1
