--- a/playbooks/roles/setup-snowflake/templates/snowflake-proxy.service.j2
+++ b/playbooks/roles/setup-snowflake/templates/snowflake-proxy.service.j2
@@ -6,7 +6,7 @@ After=network-online.target docker.socket firewalld.service
 Wants=network-online.target
 
 [Service]
-{% if metrics_port is defined and metrics_port != "" %}
+{% if metrics_port is defined and metrics_port %}
 ExecStart=/usr/bin/proxy -metrics -summary-interval 0h1m0s
 {% else %}
 ExecStart=/usr/bin/proxy
