--- a/playbooks/roles/setup/templates/metrics.conf.j2
+++ b/playbooks/roles/setup/templates/metrics.conf.j2
@@ -1,27 +1,27 @@
 # {{ ansible_managed }}
 
 server {
+{% if metrics_port is defined and metrics_port %}
+{% if prometheus_server is defined and prometheus_server %}
   listen {{ ansible_facts.default_ipv4.address }}:{{ metrics_port }} ssl http2;
+{% else %}
+  listen 127.0.0.1:{{ metrics_port }} ssl http2;
+{% endif %}
+{% endif %}
 
-{% if prometheus_node_exporter is true %}
+{% if prometheus_node_exporter is defined and prometheus_node_exporter %}
   location = /metrics-node {
     proxy_pass http://127.0.0.1:9100/metrics;
-    access_log off;
-    error_log off;
   }
 {% endif %}
 {% if group_names is contains('public') or group_names is contains('private') %}
   location = /metrics-relay {
     proxy_pass http://127.0.0.1:9052/metrics;
-    access_log off;
-    error_log off;
   }
 {% endif %}
 {% if group_names is contains('snowflake') %}
   location = /metrics-snowflake {
     proxy_pass http://127.0.0.1:9999/internal/metrics;
-    access_log off;
-    error_log off;
   }
 {% endif %}
 
@@ -31,4 +31,6 @@ server {
   ssl_certificate_key /etc/ssl/private/nginx-selfsigned-metrics.key;
 
   add_header Strict-Transport-Security "max-age=63072000" always;
+  access_log off;
+  error_log off;
 }
