--- a/playbooks/roles/setup/templates/firewall-ipv4.sh.j2
+++ b/playbooks/roles/setup/templates/firewall-ipv4.sh.j2
@@ -34,7 +34,7 @@ function addRules() {
   $ipt -A INPUT -p icmp --icmp-type echo-request -m limit --limit 6/s -j ACCEPT
   $ipt -A INPUT -p icmp --icmp-type echo-request -j DROP
 
-{% if metrics_port is defined and metrics_port and prometheus_server is defined and prometheus_server %}
+{% if metrics_port and prometheus_server %}
   # Prometheus scrape metrics
   $ipt -A INPUT -p tcp --src {{ prometheus_server }} --dst {{ ansible_facts.default_ipv4.address }} --dport {{ metrics_port }} --syn -j ACCEPT
 {%endif %}
