--- a/playbooks/roles/setup/templates/metrics.conf.j2
+++ b/playbooks/roles/setup/templates/metrics.conf.j2
@@ -1,15 +1,15 @@
 # {{ ansible_managed }}
 
 server {
-{% if metrics_port is defined and metrics_port %}
-{% if prometheus_server is defined and prometheus_server %}
+{% if metrics_port %}
+{% if prometheus_server %}
   listen {{ ansible_facts.default_ipv4.address }}:{{ metrics_port }} ssl http2;
 {% else %}
   listen 127.0.0.1:{{ metrics_port }} ssl http2;
 {% endif %}
 {% endif %}
 
-{% if prometheus_node_exporter is defined and prometheus_node_exporter %}
+{% if prometheus_node_exporter %}
   location = /metrics-node {
     proxy_pass http://127.0.0.1:9100/metrics;
   }
