--- a/playbooks/roles/setup_tor/templates/torrc.j2
+++ b/playbooks/roles/setup_tor/templates/torrc.j2
@@ -15,13 +15,13 @@ ExtORPort auto
 ServerTransportPlugin obfs4 exec /usr/bin/{{ tor_build_from_source | ternary('lyrebird', 'obfs4proxy') }}
 ServerTransportListenAddr obfs4 0.0.0.0:{{ obfs4_port }}
 
-{% if metrics_port is defined and metrics_port %}
+{% if metrics_port %}
 MetricsPort 127.0.0.1:9052
 MetricsPortPolicy accept 127.0.0.1
 {% endif %}
 
 {% for item in torrc_config %}
-{% if item.value != '' %}
+{% if item.value %}
 {{ item.name }} {{ item.value }}
 {% endif %}
 {% endfor %}
