--- a/playbooks/roles/setup/templates/firewall-ipv4.sh.j2
+++ b/playbooks/roles/setup/templates/firewall-ipv4.sh.j2
@@ -18,7 +18,7 @@ function addRules() {
   $ipt -P OUTPUT ACCEPT
 
   # allow loopback
-  $ipt -A INPUT --in-interface lo -m comment --comment "$(date -R)" -j ACCEPT
+  $ipt -A INPUT --in-interface lo -m comment -j ACCEPT
 
   # make sure NEW incoming tcp connections are SYN packets
   $ipt -A INPUT -p tcp ! --syn -m state --state NEW -j DROP
