--- a/playbooks/roles/setup/templates/firewall-ipv6.sh.j2
+++ b/playbooks/roles/setup/templates/firewall-ipv6.sh.j2
@@ -18,7 +18,7 @@ function addRules() {
   $ipt -P OUTPUT ACCEPT
 
   # allow loopback
-  $ipt -A INPUT --in-interface lo -m comment --comment "$(date -R)" -j ACCEPT
+  $ipt -A INPUT --in-interface lo -m comment -j ACCEPT
 
   # IPv6 Multicast
   $ipt -A INPUT -p udp --source fe80::/10 --dst ff02::/80 -j ACCEPT
