--- a/playbooks/roles/setup/templates/firewall-ipv4.sh.j2
+++ b/playbooks/roles/setup/templates/firewall-ipv4.sh.j2
@@ -1,4 +1,4 @@
-#!/bin/bash
+#!/usr/bin/env bash
 #set -x
 # {{ ansible_managed }}
 
@@ -18,7 +18,7 @@ function addRules() {
   $ipt -P OUTPUT ACCEPT
 
   # allow loopback
-  $ipt -A INPUT --in-interface lo -m comment -j ACCEPT
+  $ipt -A INPUT --in-interface lo -j ACCEPT
 
   # make sure NEW incoming tcp connections are SYN packets
   $ipt -A INPUT -p tcp ! --syn -m state --state NEW -j DROP
@@ -53,9 +53,11 @@ set -euf
 
 ipt=/sbin/iptables
 
+trap clearAll INT QUIT TERM EXIT
 if [[ $1 == "start" ]]; then
   clearAll
   addRules
 else
   $1
 fi
+trap - INT QUIT TERM EXIT
