--- a/playbooks/roles/setup/templates/firewall-ipv6.sh.j2
+++ b/playbooks/roles/setup/templates/firewall-ipv6.sh.j2
@@ -42,12 +42,14 @@ function addRules() {
   $ipt -A INPUT -p udp --sport 547 -j ACCEPT
   $ipt -A INPUT -p udp --dport 546 -j ACCEPT
 
-  # any additional ports
+  # additional ports
 {% for __i in additional_ports %}
 {% if ',' in __i or ':' in __i %}
-  $ipt -A INPUT -p tcp --match multiport --dports {{ __i }} --syn -j ACCEPT
+  $ipt -A INPUT -p tcp --dst {{ ansible_facts.default_ipv6.address }} --match multiport --dports {{ __i }} --syn -m hashlimit --hashlimit-mode srcip,dstport --hashlimit-srcmask 80 --hashlimit-name port6-{{ __i }} --hashlimit-above 6/minute --hashlimit-burst 1 --hashlimit-htable-expire {{ 2 * 60 * 1000 }} -j DROP
+  $ipt -A INPUT -p tcp --dst {{ ansible_facts.default_ipv6.address }} --match multiport --dports {{ __i }} --syn -j ACCEPT
 {% else %}
-  $ipt -A INPUT -p tcp --dport {{ __i }} --syn -j ACCEPT
+  $ipt -A INPUT -p tcp --dst {{ ansible_facts.default_ipv6.address }} --dport {{ __i }} --syn -m hashlimit --hashlimit-mode srcip,dstport --hashlimit-srcmask 80 --hashlimit-name port6-{{ __i }} --hashlimit-above 6/minute --hashlimit-burst 1 --hashlimit-htable-expire {{ 2 * 60 * 1000 }} -j DROP
+  $ipt -A INPUT -p tcp --dst {{ ansible_facts.default_ipv6.address }} --dport {{ __i }} --syn -j ACCEPT
 {% endif %}
 {% endfor %}
 }
