--- a/playbooks/roles/setup_tor/templates/torrc.j2
+++ b/playbooks/roles/setup_tor/templates/torrc.j2
@@ -1,24 +1,36 @@
 # torrc
 # {{ ansible_managed }}
 
-BridgeRelay 1
-
 {% if tor_build_from_source %}
 # if self-compiled then do not rely on compile-time configure option (/home/tor/.tor/)
 DataDirectory /var/lib/tor
 {% endif %}
 
+{% if bridge_distribution %}
+BridgeRelay 1
+
 SandBox 0
+
 ORPort 127.0.0.1:auto
 AssumeReachable 1
 ExtORPort auto
 ServerTransportPlugin obfs4 exec /usr/bin/{{ tor_build_from_source | ternary('lyrebird', 'obfs4proxy') }}
-ServerTransportListenAddr obfs4 0.0.0.0:{{ obfs4_port }}
+ServerTransportListenAddr obfs4 0.0.0.0:{{ tor_port }}
+{% else %}
+ExitRelay 0
+
+SandBox 1
+
+ORPort {{ ansible_facts.default_ipv4.address }}:{{ tor_port }}
+ORPort {{ ansible_facts.default_ipv6.address }}:{{ tor_port }}
+{% endif %}
 
 {% if metrics_port %}
 MetricsPort 127.0.0.1:9052
 MetricsPortPolicy accept 127.0.0.1
 {% endif %}
+
+SocksPort 0
 
 {% for item in torrc_config %}
 {% if item.value %}
