--- a/playbooks/roles/setup_snowflake/templates/snowflake-proxy.service.j2
+++ b/playbooks/roles/setup_snowflake/templates/snowflake-proxy.service.j2
@@ -6,7 +6,7 @@ After=network-online.target docker.socket firewalld.service
 Wants=network-online.target
 
 [Service]
-{% if metrics_port %}
+{% if metrics_port | int > 0 %}
 ExecStart=/usr/bin/snowflake-proxy -metrics -summary-interval 0h1m0s -verbose
 {% else %}
 ExecStart=/usr/bin/snowflake-proxy -verbose
