--- a/playbooks/roles/setup/templates/metrics.conf.j2
+++ b/playbooks/roles/setup/templates/metrics.conf.j2
@@ -1,7 +1,7 @@
 # {{ ansible_managed }}
 
 server {
-{% if metrics_port | int > 0 %}
+{% if metrics_port | length > 0 %}
 {% if prometheus_server %}
   listen {{ ansible_facts.default_ipv4.address }}:{{ metrics_port }} ssl http2;
 {% else %}
@@ -14,12 +14,12 @@ server {
     proxy_pass http://127.0.0.1:9100/metrics;
   }
 {% endif %}
-{% if group_names is contains('tor') %}
-  location = /metrics-relay {
+{% if tor_metrics is defined and tor_metrics %}
+  location = /metrics-tor {
     proxy_pass http://127.0.0.1:9052/metrics;
   }
 {% endif %}
-{% if group_names is contains('snowflake') %}
+{% if snowflake_metrics is defined and snowflake_metrics %}
   location = /metrics-snowflake {
     proxy_pass http://127.0.0.1:9999/internal/metrics;
   }
