fix remaining metrics quirks

--- a/playbooks/roles/setup_tor/templates/torrc.j2
+++ b/playbooks/roles/setup_tor/templates/torrc.j2
@@ -29,7 +29,7 @@ ORPort {{ ansible_facts.default_ipv4.address }}:{{ tor_port }}
 ORPort {{ ansible_facts.default_ipv6.address }}:{{ tor_port }}
 {% endif %}
 
-{% if metrics_port | length > 0 %}
+{% if tor_metrics %}
 MetricsPort 127.0.0.1:9052
 MetricsPortPolicy accept 127.0.0.1
 {% endif %}
