--- a/playbooks/roles/setup/templates/metrics.conf.j2
+++ b/playbooks/roles/setup/templates/metrics.conf.j2
@@ -14,12 +14,12 @@ server {
     proxy_pass http://127.0.0.1:9100/metrics;
   }
 {% endif %}
-{% if tor_metrics %}
+{% if tor_metrics is defined and tor_metrics %}
   location = /metrics-tor {
     proxy_pass http://127.0.0.1:9052/metrics;
   }
 {% endif %}
-{% if snowflake_metrics %}
+{% if snowflake_metrics is defined and snowflake_metrics %}
   location = /metrics-snowflake {
     proxy_pass http://127.0.0.1:9999/internal/metrics;
   }
