--- a/playbooks/roles/setup_snowflake/templates/snowflake-proxy.service.j2
+++ b/playbooks/roles/setup_snowflake/templates/snowflake-proxy.service.j2
@@ -7,7 +7,7 @@ Wants=network-online.target
 
 [Service]
 {% if snowflake_metrics %}
-ExecStart=/usr/bin/snowflake-proxy -metrics -summary-interval 0h1m0s -verbose
+ExecStart=/usr/bin/snowflake-proxy -verbose -metrics -summary-interval 0h1m0s
 {% else %}
 ExecStart=/usr/bin/snowflake-proxy -verbose
 {% endif %}
@@ -32,6 +32,9 @@ PrivateUsers=true
 ProtectHostname=true
 Restart=on-failure
 RestartSec=5s
+ReadOnlyDirectories=/
+ReadWriteDirectories=-/proc
+ReadWriteDirectories=-/run
 
 [Install]
 WantedBy=multi-user.target
