--- a/playbooks/roles/setup_tor/templates/torrc.j2
+++ b/playbooks/roles/setup_tor/templates/torrc.j2
@@ -37,7 +37,7 @@ MetricsPortPolicy accept 127.0.0.1
 
 SocksPort 0
 
-{% for item in torrc_config %}
+{% for item in torrc_config + tor_config_local %}
 {% if item.value %}
 {{ item.name }} {{ item.value }}
 {% endif %}
