--- a/playbooks/roles/setup_snowflake/templates/snowflake-proxy.service.j2
+++ b/playbooks/roles/setup_snowflake/templates/snowflake-proxy.service.j2
@@ -7,9 +7,9 @@ Wants=network-online.target
 
 [Service]
 {% if snowflake_metrics %}
-ExecStart=/usr/bin/snowflake-proxy -verbose -metrics -summary-interval 0h1m0s
+ExecStart=/usr/bin/snowflake-proxy {{ snowflake_command_args }} -metrics -summary-interval 0h1m0s
 {% else %}
-ExecStart=/usr/bin/snowflake-proxy -verbose
+ExecStart=/usr/bin/snowflake-proxy {{ snowflake_command_args }}
 {% endif %}
 User=snowflake
 Group=snowflake
