--- a/playbooks/roles/setup_tor/templates/tor.service.j2
+++ b/playbooks/roles/setup_tor/templates/tor.service.j2
@@ -6,9 +6,10 @@ After=network-online.target docker.socket firewalld.service
 Wants=network-online.target
 
 [Service]
+ExecStartPre=/usr/bin/tor --verify-config
 ExecStart=/usr/bin/tor
 ExecReload=/bin/kill -HUP ${MAINPID}
-TimeoutSec=40
+TimeoutSec=30
 User=tor
 Group=tor
 Restart=on-failure
@@ -16,15 +17,13 @@ LimitNOFILE=65536
 KillSignal=SIGINT
 
 # Hardening
-CapabilityBoundingSet=CAP_SETUID CAP_SETGID CAP_NET_BIND_SERVICE CAP_DAC_READ_SEARCH
-NoNewPrivileges=no
+CapabilityBoundingSet=CAP_SETUID CAP_SETGID CAP_NET_BIND_SERVICE CAP_DAC_READ_SEARCH CAP_KILL
+NoNewPrivileges={{ (bridge_distribution | length == 0) | ternary('yes', 'no') }}
 PrivateDevices=no
 PrivateTmp=yes
 ProtectHome=yes
 ProtectSystem=full
 ReadOnlyDirectories=/
-ReadWriteDirectories=-/proc
-ReadWriteDirectories=-/run
 ReadWriteDirectories=-/var/lib/tor
 ReadWriteDirectories=-/var/log/tor
 
