slightly modify apt timers and reboot if a service restart is deferred

--- a/playbooks/roles/setup/templates/timer.j2
+++ b/playbooks/roles/setup/templates/timer.j2
@@ -3,6 +3,5 @@
 # https://wiki.debian.org/UnattendedUpgrades
 [Timer]
 OnCalendar=
-OnCalendar=*-*-* {{ 12 | random(seed=inventory_hostname) }},{{ 12 + 12 | random(seed=inventory_hostname) }}:00
-RandomizedDelaySec=0
-
+OnCalendar=*-*-* {{ timer_hour }},{{ 12 + timer_hour | int }}:02
+RandomizedDelaySec=120
