--- a/playbooks/roles/setup/templates/upgrade.j2
+++ b/playbooks/roles/setup/templates/upgrade.j2
@@ -2,5 +2,5 @@
 
 # https://wiki.debian.org/UnattendedUpgrades
 [Timer]
-OnCalendar=*-*-* {{ 12 | random(seed=inventory_hostname) }},{{ 12 + 12 | random(seed=inventory_hostname) }}:10
-RandomizedDelaySec={{ 49 * 60 }}
+OnCalendar=*-*-* {{ timer_hour }},{{ 12 + timer_hour | int }}:15
+RandomizedDelaySec={{ 44 * 60 }}
