polish calls of ansible.builtin.service

--- a/playbooks/roles/setup/templates/firewall-ipv4.sh.j2
+++ b/playbooks/roles/setup/templates/firewall-ipv4.sh.j2
@@ -53,7 +53,7 @@ function addRules() {
 #######################################################################
 set -euf
 
-ipt=/sbin/iptables
+ipt=iptables
 
 trap clearAll INT QUIT TERM EXIT
 if [[ $1 == "start" ]]; then
