handle RAM < 1 MB

--- a/playbooks/roles/setup_tor/templates/tor.service.j2
+++ b/playbooks/roles/setup_tor/templates/tor.service.j2
@@ -27,5 +27,9 @@ ReadOnlyDirectories=/
 ReadWriteDirectories=-/var/lib/tor
 ReadWriteDirectories=-/var/log/tor
 
+{% if ansible_facts.memtotal_mb < 1024 %}
+MemoryHigh=700MB
+{% endif %}
+
 [Install]
 WantedBy=multi-user.target
