--- a/playbooks/roles/setup_snowflake/templates/snowflake-proxy.service.j2
+++ b/playbooks/roles/setup_snowflake/templates/snowflake-proxy.service.j2
@@ -36,5 +36,9 @@ ReadOnlyDirectories=/
 ReadWriteDirectories=-/proc
 ReadWriteDirectories=-/run
 
+{% if ansible_facts.memtotal_mb < 1024 %}
+MemoryHigh=700MB
+{% endif %}%}
+
 [Install]
 WantedBy=multi-user.target
