Revert "expect a list"
This reverts commit c2cac61f8fca32c97513308e5b3e210cf29ae5be.

--- a/playbooks/roles/setup_tor/templates/torrc.j2
+++ b/playbooks/roles/setup_tor/templates/torrc.j2
@@ -39,5 +39,7 @@ MetricsPortPolicy accept 127.0.0.1
 SocksPort 0
 
 {% for item in torrc_config + tor_config_group + tor_config_host %}
+{% if item.value %}
 {{ item.name }} {{ item.value }}
+{% endif %}
 {% endfor %}
