--- a/playbooks/roles/setup_tor/templates/torrc.j2
+++ b/playbooks/roles/setup_tor/templates/torrc.j2
@@ -8,6 +8,7 @@ DataDirectory /var/lib/tor
 
 {% if bridge_distribution | length > 0 %}
 BridgeRelay 1
+BridgeDistribution {{ bridge_distribution }}
 
 SandBox 0
 
@@ -42,7 +43,5 @@ MetricsPortPolicy accept 127.0.0.1
 SocksPort 0
 
 {% for item in torrc_config + tor_config_group + tor_config_host %}
-{% if item.value %}
 {{ item.name }} {{ item.value }}
-{% endif %}
 {% endfor %}
