try to use hw accel

--- a/playbooks/roles/setup_tor/templates/torrc.j2
+++ b/playbooks/roles/setup_tor/templates/torrc.j2
@@ -42,6 +42,8 @@ MetricsPortPolicy accept 127.0.0.1
 
 SocksPort 0
 
+HardwareAccel 1
+
 {% for item in torrc_config + tor_config_group + tor_config_host %}
 {{ item.name }} {{ item.value }}
 {% endfor %}
