fix syntax of unatt upgrade overrides

--- a/playbooks/roles/setup/templates/timer.j2
+++ b/playbooks/roles/setup/templates/timer.j2
@@ -1,6 +1,6 @@
-# {{ ansible_managed }}
+// {{ ansible_managed }}
+// https://wiki.debian.org/UnattendedUpgrades
 
-# https://wiki.debian.org/UnattendedUpgrades
 [Timer]
 OnCalendar=
 OnCalendar=*-*-* {{ timer_hour }},{{ 12 + timer_hour | int }}:02
