--- a/playbooks/roles/setup_tor/templates/torrc.j2
+++ b/playbooks/roles/setup_tor/templates/torrc.j2
@@ -44,6 +44,10 @@ MetricsPortPolicy accept 127.0.0.1
 
 SocksPort 0
 
+CellStatistics 0
+ConnDirectionStatistics 1
+EntryStatistics 1
+
 {% for item in torrc_config + tor_config_all + tor_config_group + tor_config_host %}
 {{ item.name }} {{ item.value }}
 {% endfor %}
