move stats towards server section

--- a/playbooks/roles/setup_tor/templates/torrc.j2
+++ b/playbooks/roles/setup_tor/templates/torrc.j2
@@ -35,6 +35,11 @@ ORPort [{{ ansible_facts.default_ipv6.address }}]:{{ tor_port }}
 {% if my_family | length > 0 %}
 MyFamily {{ my_family  }}
 {% endif %}
+
+CellStatistics 0
+ConnDirectionStatistics 1
+EntryStatistics 1
+ExitPortStatistics 1
 {% endif %}
 
 {% if tor_metrics %}
@@ -43,10 +48,6 @@ MetricsPortPolicy accept 127.0.0.1
 {% endif %}
 
 SocksPort 0
-
-CellStatistics 0
-ConnDirectionStatistics 1
-EntryStatistics 1
 
 {% for item in torrc_config + tor_config_all + tor_config_group + tor_config_host %}
 {{ item.name }} {{ item.value }}
