--- a/playbooks/roles/setup/templates/firewall-ipv4.sh.j2
+++ b/playbooks/roles/setup/templates/firewall-ipv4.sh.j2
@@ -37,7 +37,7 @@ function addRules() {
   # DHCPv4
   $ipt -A INPUT -p udp --dport 68 -j ACCEPT
 
-{% if (metrics_port | length > 0) and (prometheus_server | length > 0) %}
+{% if metrics_port and prometheus_server %}
   # Prometheus scrape metrics
   $ipt -A INPUT -p tcp --src {{ prometheus_server }} --dst {{ ansible_facts.default_ipv4.address }} --dport {{ metrics_port }} --syn -j ACCEPT
 {%endif %}
