--- a/playbooks/roles/setup/templates/metrics.conf.j2
+++ b/playbooks/roles/setup/templates/metrics.conf.j2
@@ -9,17 +9,17 @@ server {
 {% endif %}
 {% endif %}
 
-{% if prometheus_node_exporter %}
+{% if node_metrics is true %}
   location = /metrics-node {
     proxy_pass http://127.0.0.1:9100/metrics;
   }
 {% endif %}
-{% if tor_metrics %}
+{% if tor_metrics is true %}
   location = /metrics-tor {
     proxy_pass http://127.0.0.1:9052/metrics;
   }
 {% endif %}
-{% if snowflake_metrics %}
+{% if snowflake_metrics is true %}
   location = /metrics-snowflake {
     proxy_pass http://127.0.0.1:9999/internal/metrics;
   }
